# bpfman

./: .ci-operator.yaml  .dockerignore  .envrc  .gitignore  .gitmodules  .golangci.yaml  .golangci.yml  .licenserc.yaml  .packit.sh  .packit.yml  .pre-commit-config.yaml  .taplo.toml  .yamllint.yaml  404.html  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Containerfile  Containerfile.bpfman  Containerfile.bpfman.amd64  Containerfile.bpfman.arm64  Containerfile.bpfman.local  Containerfile.bpfman.multi.arch  Containerfile.bpfman.openshift  Containerfile.bytecode  Containerfile.bytecode.multi.arch  Containerfile.cross-build  Containerfile.tc_dispatcher  Containerfile.xdp_dispatcher_v1  Containerfile.xdp_dispatcher_v2  Cross.toml  Dockerfile.bpfman  Dockerfile.bpfman.dev  Dockerfile.bpfman.dev.dockerignore  Dockerfile.bpfman.dockerignore  Dockerfile.ci  Dockerfile.ci.dockerignore  Dockerfile.csi-sanity  Dockerfile.csi-sanity.dockerignore  GOVERNANCE.md  (+68 more)
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  mergify.yml
.tekton/: bpfman-daemon-ystream-pull-request.yaml  bpfman-daemon-ystream-push.yaml  bpfman-daemon-zstream-pull-request.yaml  bpfman-daemon-zstream-push.yaml  bpfman-pull-request.yaml  bpfman-push.yaml  multi-arch-build-pipeline.yaml  ocp-bpfman-pull-request.yaml  ocp-bpfman-push.yaml
.vim/: coc-settings.json
bpf/: .gitignore  Makefile  tc_dispatcher.bpf.c  tc_qdisc.bpf.c  xdp_dispatcher.bpf.c  xdp_dispatcher_v1.bpf.c  xdp_dispatcher_v2.bpf.c  xdp_pass.bpf.c
bpf-log-exporter/: Cargo.toml  build.rs
bpf-log-exporter/src/: main.rs
bpf-metrics-exporter/: Cargo.toml  README.md  bpf_traces.bt  build.rs  metrics-stack.yaml
bpf-metrics-exporter/src/: main.rs
bpfctl/: Cargo.toml
bpfctl/src/: config.rs  main.rs
bpfd/: Cargo.toml  build.rs
bpfd-agent/: Cargo.toml
bpfd-agent/src/: bpfd_agent.rs  crdgen.rs  finalizer.rs  main.rs
bpfd-api/: Cargo.toml
bpfd-api/src/: bpfd.v1.rs  certs.rs  config.rs  lib.rs  util.rs
bpfd-common/: Cargo.toml
bpfd-common/src/: lib.rs
bpfd-ebpf/: Cargo.toml  tc_dispatcher.bpf.c  xdp_counter.bpf.c  xdp_dispatcher.bpf.c  xdp_dispatcher_test.bpf.c  xdp_maps.bpf.c  xdp_pass.bpf.c  xdp_pass_map.bpf.c
bpfd-ebpf/.cargo/: config.toml
bpfd-ebpf/src/: drop.rs  pass.rs  tc.rs  xdp.rs
bpfd-ebpf/src/bpf/: tc_dispatcher.bpf.c
bpfd-k8s-api/: Cargo.toml
bpfd-k8s-api/src/: ebpfprogram.v1alpha1.rs  lib.rs
bpfd-operator/: .gitignore  Containerfile.bpfd-agent  Containerfile.bpfd-operator  Makefile  PROJECT  README.md  bundle.Dockerfile  go.mod  go.sum  main.go
bpfd/bpf/: xdp_counter.bpf.c
bpfd/proto/: bpfd.proto
bpfd/src/: bpf.rs  certs.rs  client.rs  command.rs  config.rs  dispatcher_config.rs  errors.rs  lib.rs  main.rs  proto.rs  qdisc.rs  rpc.rs  serve.rs  server.rs  static_program.rs  storage.rs  utils.rs
bpfd/src/bpf/: xdp_dispatcher.bpf.c
bpfd/src/multiprog/: mod.rs  tc.rs  xdp.rs
bpfd/src/oci-utils/: image_manager.rs
bpfd/src/oci_utils/: cosign.rs  image_manager.rs  mod.rs
bpfd/src/server/: bpf.rs  certs.rs  command.rs  config.rs  errors.rs  mod.rs  pull_bytecode.rs  rpc.rs  static_program.rs  utils.rs
bpfman/: Cargo.toml  build.rs  diesel.toml  generate-diesel-schema
bpfman-api/: Cargo.toml
bpfman-api/src/: bpfman.v1.rs  config.rs  lib.rs  util.rs
bpfman-ns/: Cargo.toml
bpfman-ns/src/: main.rs
bpfman-operator/: .gitignore  Containerfile.bpfman-agent  Containerfile.bpfman-operator  Containerfile.bundle  Makefile  PROJECT  bundle.Dockerfile
bpfman/bpf/: Makefile
bpfman/migrations/2025-02-12-140102_create_initial_schema/: down.sql  up.sql
bpfman/migrations/2025-04-03-140102_add_indices/: down.sql  up.sql
bpfman/src/: bpf.rs  command.rs  config.rs  dispatcher_config.rs  dispatcher_view.rs  errors.rs  lib.rs  main.rs  models.rs  netlink.rs  program_loader.rs  rpc.rs  schema.rs  serve.rs  static_program.rs  storage.rs  types.rs  u64blob.rs  uintblob.rs  utils.rs
bpfman/src/cli/: args.rs  get.rs  image.rs  list.rs  load.rs  mod.rs  system.rs  table.rs  unload.rs
bpfman/src/cli/load/: file.rs  image.rs  mod.rs  programs.rs
bpfman/src/cli/system/: mod.rs  service.rs
bpfman/src/db/: mod.rs  prelude.rs  schema.rs
bpfman/src/db/models/: bpf_link.rs  bpf_map.rs  bpf_program.rs  bpf_program_map.rs  mod.rs
bpfman/src/db/types/: ku32.rs  mod.rs  uintblob.rs
bpfman/src/multiprog/: mod.rs  tc.rs  xdp.rs
bpfman/src/oci_utils/: client.rs  cosign.rs  image_manager.rs  mod.rs
buildinfo/: Cargo.toml
buildinfo/src/: lib.rs
changelogs/: CHANGELOG-v0.1.0.md  CHANGELOG-v0.1.1.md  CHANGELOG-v0.2.0.md  CHANGELOG-v0.2.1.md  CHANGELOG-v0.3.0.md  CHANGELOG-v0.3.1.md  CHANGELOG-v0.4.0.md  CHANGELOG-v0.4.1-rc1.md  CHANGELOG-v0.4.1.md  (+15 more)
csi/: Cargo.toml  doc.go  driver.go  identity.go  locks.go  node.go  node_test.go
csi/src/: csi.v1.rs  lib.rs
examples/basic-node-firewall/basic-node-firewall/: Cargo.toml
examples/basic-node-firewall/basic-node-firewall-ebpf/: Cargo.toml  rust-toolchain.toml
examples/basic-node-firewall/basic-node-firewall-ebpf/.cargo/: config.toml
examples/basic-node-firewall/basic-node-firewall-ebpf/src/: bindings.rs  main.rs
examples/basic-node-firewall/basic-node-firewall/k8s-packaging/: Containerfile.basic-node-fw  basic-blocklist-config.yaml  basic-node-firewall-ds.yaml  basic-node-firewall-rbac.yaml
examples/basic-node-firewall/basic-node-firewall/src/: main.rs
tests/integration-test/: Cargo.toml
tests/integration-test-macros/: Cargo.toml
tests/integration-test/bpf/: app-test.bpf.c  build_push_images.sh  fentry.bpf.c  kprobe.bpf.c  kprobe_globals.bpf.c  mallocprobe.bpf.c  tc_pass.bpf.c  tcx_test.bpf.c  tp_openat.bpf.c  uprobe.bpf.c  xdp_pass.bpf.c
tests/integration-test/src/: main.rs
tests/integration-test/src/tests/: basic.rs  container_utils.rs  e2e.rs  error.rs  mod.rs  utils.rs
xtask/: Cargo.toml
xtask/public-api/: bpfman-api.txt  bpfman-csi.txt  bpfman.txt
xtask/src/: build_completion.rs  build_ebpf.rs  build_manpage.rs  copy.rs  integration_test.rs  lint.rs  main.rs  protobuf.rs  public_api.rs  run.rs  unit_test.rs  workspace.rs
(+2507 files in other folders)
