[workspace]
members = [
    "bpf-log-exporter",
    "bpf-metrics-exporter",
    "bpfman",
    "bpfman-api",
    "bpfman-ns",
    "csi",
    "tests/integration-test",
    "tests/integration-test-macros",
    "xtask",
]
resolver = "2"

[workspace.package]
documentation = "https://bpfman.io/main/getting-started/overview/"
edition = "2021"
homepage = "https://bpfman.io"
license = "Apache-2.0"
repository = "https://github.com/bpfman/bpfman"
version = "0.5.5"

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
assert_cmd = { version = "2", default-features = false }
assert_matches = { version = "1", default-features = false }
async-trait = { version = "0.1", default-features = false }
aya = { version = "0.13.1", default-features = false }
aya-obj = { version = "0.2.1", default-features = false }
base16ct = { version = "0.2.0", default-features = false }
base64 = { version = "0.22.0", default-features = false }
bpfman = { version = "0.5.5", path = "./bpfman" }
bpfman-api = { version = "0.5.5", path = "./bpfman-api" }
bpfman-csi = { version = "1.8.0", path = "./csi" }
caps = { version = "0.5.4", default-features = false }
cargo_metadata = { version = "0.18.0", default-features = false }
chrono = { version = "0.4.39", default-features = false }
clap = { version = "4", default-features = false }
clap_complete = { version = "4.5.42", default-features = false }
clap_mangen = { version = "0.2.26", default-features = false }
comfy-table = { version = "7.1.3", default-features = false }
dialoguer = { version = "0.11", default-features = false }
diff = { version = "0.1.13", default-features = false }
env_logger = { version = "0.11.6", default-features = false }
flate2 = { version = "1.0", default-features = false }
futures = { version = "0.3.31", default-features = false }
hex = { version = "0.4.3", default-features = false }
integration-test-macros = { path = "./tests/integration-test-macros" }
inventory = { version = "0.3", default-features = false }
lazy_static = { version = "1", default-features = false }
libsystemd = { version = "0.7.0", default-features = false }
log = { version = "0.4", default-features = false }
netlink-packet-audit = { version = "^0.5", default-features = false }
netlink-packet-core = { version = "^0.7", default-features = false }
netlink-packet-route = { version = "^0.19", default-features = false }
netlink-sys = { version = "^0.8", default-features = false }
nix = { version = "0.28", default-features = false }
object = { version = "0.36.7", default-features = false }
oci-distribution = { version = "0.11", default-features = false }
opentelemetry = { version = "0.22.0", default-features = false }
opentelemetry-otlp = { version = "0.15.0", default-features = false }
opentelemetry-semantic-conventions = { version = "0.14.0" }
opentelemetry_sdk = { version = "0.22.1", default-features = false }
predicates = { version = "3.1.3", default-features = false }
procfs = { version = "0.16.0", default-features = false }
prost = { version = "0.12.6", default-features = false }
prost-types = { version = "0.12.6", default-features = false }
public-api = { version = "0.42.0", default-features = false }
quote = { version = "1", default-features = false }
rand = { version = "0.8", default-features = false }
regex = { version = "1.11.1", default-features = false }
rtnetlink = { version = "0.14", default-features = false }
rustdoc-json = { version = "0.8.9", default-features = false }
rustup-toolchain = { version = "0.1.9", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
sigstore = { version = "0.10.0", default-features = false }
sled = { version = "0.34.7", default-features = false }
syn = { version = "2.0", default-features = false }
systemd-journal-logger = { version = "2.2.0", default-features = false }
tar = { version = "0.4", default-features = false }
tempfile = { version = "3.14.0", default-features = false }
thiserror = { version = "2", default-features = false }
tokio = { version = "1.43.0", default-features = false }
tokio-stream = { version = "0.1.17", default-features = false }
tokio-util = { version = "0.7.13", default-features = false }
toml = { version = "0.8.19", default-features = false }
tonic = { version = "0.11.0", default-features = false }
tonic-build = { version = "0.11.0", default-features = false }
tower = { version = "0.5.2", default-features = false }
url = { version = "2.5.4", default-features = false }
users = { version = "0.11.0", default-features = false }

[workspace.metadata.vendor-filter]
platforms = [
    "aarch64-unknown-linux-gnu",
    "i686-unknown-linux-gnu",
    "powerpc64le-unknown-linux-gnu",
    "s390x-unknown-linux-gnu",
    "x86_64-unknown-linux-gnu",
]
