[project]
dependencies = [
    "Babel==2.13.1",
    "Jinja2==3.1.2",
    "Markdown==3.3.7",
    "MarkupSafe==2.1.1",
    "PyYAML==6.0.1",
    "Pygments==2.17.2",
    "beautifulsoup4==4.13.4",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "cssselect==1.3.0",
    "ghp-import==2.1.0",
    "idna==3.10",
    "importlib-metadata==4.11.4",
    "lxml==5.4.0",
    "markdown2==2.5.3",
    "mergedeep==1.3.4",
    "mike==2.1.3",
    "mkdocs-material-extensions==1.3.1",
    "mkdocs-material==9.4.11",
    "mkdocs==1.6.1",
    "packaging==25.0",
    "paginate==0.5.7",
    "pathspec==0.12.1",
    "platformdirs==4.3.7",
    "pymdown-extensions==10.4",
    "pyparsing==3.2.3",
    "pyquery==2.0.1",
    "python-dateutil==2.9.0",
    "pyyaml_env_tag==0.1",
    "readtime==3.0.0",
    "regex==2024.11.6",
    "requests==2.32.3",
    "six==1.17.0",
    "soupsieve==2.7",
    "urllib3==2.4.0",
    "verspec==0.1.0",
    "watchdog==6.0.0",
    "zipp==3.21.0",
]
description = "bpfman documentation pages"
name = "bpfman-docs"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"
