[package]
description = "Binary for exporting eBPF events via logs"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "bpf-log-exporter"
repository.workspace = true
version.workspace = true


[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = [
    "color",
    "derive",
    "help",
    "std",
    "suggestions",
    "usage",
] }
env_logger = { workspace = true }
futures = { workspace = true }
hex = { workspace = true, features = ["alloc"] }
log = { workspace = true }
netlink-packet-audit = { workspace = true }
netlink-packet-core = { workspace = true }
netlink-sys = { workspace = true }
regex = { workspace = true }
shadow-rs = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true }
