[package]
description = "Binary for exporting eBPF events via logs"
name = "bpf-log-exporter"

documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
hex = { workspace = true, features = ["alloc"] }
log = { workspace = true }
netlink-packet-audit = { workspace = true }
netlink-packet-core = { workspace = true }
netlink-sys = { workspace = true }
regex = { workspace = true }
