[package]
description = "gRPC bindings to the bpfman API"
edition.workspace = true
license.workspace = true
name = "bpf-metrics-exporter"
repository.workspace = true
version = "0.1.0-dev"

[dependencies]
anyhow = { workspace = true }
aya = { workspace = true }
bpfman = { workspace = true }
bpfman-api = { workspace = true }
chrono = { workspace = true, features = ["std"] }
clap = { workspace = true, features = [
    "color",
    "derive",
    "help",
    "std",
    "suggestions",
    "usage",
] }
opentelemetry = { workspace = true, features = ["metrics"] }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic", "metrics"] }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["metrics", "rt-tokio"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
