[package]
description = "Binary for exporting eBPF subsystem metrics via prometheus"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "bpf-metrics-exporter"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
aya = { workspace = true }
bpfman = { workspace = true }
bpfman-api = { workspace = true }
chrono = { workspace = true, features = ["std"] }
clap = { workspace = true, features = [
    "color",
    "derive",
    "help",
    "std",
    "suggestions",
    "usage",
] }
opentelemetry = { workspace = true, features = ["metrics"] }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic", "metrics"] }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["metrics", "rt-tokio"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
