[package]
name = "bpfctl"
version = "0.1.0"
edition = "2021"
description = "A client for working with bpfd"
license = "MIT OR Apache-2.0"
repository = "https://github.com/redhat-et/bpfd"

[[bin]]
    name = "bpfctl"
    path = "src/main.rs"

[dependencies]
bpfd = { version = "0.1.0", path = "../bpfd" }
tonic = { version = "0.7", features = ["tls"] }
prost = "0.11"
anyhow = "1"
clap = { version = "3", features = ["derive"]}
tokio = { version = "1.20.1", features = ["full"] }
log = "0.4"
simplelog = "0.12"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
