[package]
name = "bpfctl"
version = "0.1.0"
edition = "2021"
description = "A client for working with bpfd"
license = "MIT OR Apache-2.0"
repository = "https://github.com/redhat-et/bpfd"

[[bin]]
    name = "bpfctl"
    path = "src/main.rs"

[dependencies]
bpfd-api = { version = "0.1.0", path = "../bpfd-api" }
tonic = { version = "0.8.0", features = ["tls"] }
prost = "0.11"
anyhow = "1"
clap = { version = "4", features = ["derive"]}
tokio = { version = "1.27.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
comfy-table = "6.1.4"
hex = "0.4.3"
tower = "0.4.13"
base64 = "0.21.0"
itertools = "0.10.5"
