[package]
description = "A client for working with bpfd"
edition = "2021"
license = "Apache-2.0"
name = "bpfctl"
repository = "https://github.com/bpfd-dev/bpfd"
version = "0.3.0"

[[bin]]
name = "bpfctl"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true, features = ["std"] }
base64 = { workspace = true }
bpfd-api = { workspace = true }
clap = { workspace = true, features = [
    "color",
    "derive",
    "help",
    "std",
    "suggestions",
    "usage",
] }
comfy-table = { workspace = true, features = ["tty"] }
env_logger = { workspace = true }
hex = { workspace = true, features = ["std"] }
log = { workspace = true }
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
tonic = { workspace = true, features = ["transport"] }
tower = { workspace = true }
