[package]
name = "bpfd-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bpfd-agent"
path = "src/main.rs"

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"

[dependencies]
bpfd-k8s-api = { path = "../bpfd-k8s-api" }
bpfd-api = { path = "../bpfd-api" }
tokio-util = "0.7.4"
assert-json-diff = "2.0.1"
validator = { version = "0.16.0", features = ["derive"] }
anyhow = "1.0.66"
futures = "0.3.17"
jsonpath_lib = "0.3.0"
k8s-openapi = { version = "0.16.0", features = ["v1_25"], default-features = false }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"
tokio = { version = "1.21.2", features = ["full"] }
either = "1.6.1"
schemars = "0.8.6"
static_assertions = "1.1.0"
tar = "0.4.37"
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
warp = { version = "0.3", default-features = false, features = ["tls"] }
http = "0.2.5"
json-patch = "0.2.6"
tower = { version = "0.4.6", features = ["limit"] }
tower-http = { version = "0.3.2", features = ["trace", "decompression-gzip"] }
hyper = { version = "0.14.13", features = ["client", "http1", "stream", "tcp"] }
thiserror = "1.0.36"
backoff = "0.4.0"
clap = { version = "4.0.22", default-features = false, features = ["std", "cargo", "derive"] }
edit = "0.1.3"
tokio-stream = { version = "0.1.10", features = ["net"] }
tonic = { version = "0.8", features = ["tls"] }
openssl = { version = "0.10.43", features = ["vendored"] }

[dependencies.kube]
features = ["runtime", "client", "derive"]
version = "0.76.0"
