[package]
name = "bpfd-api"
version = "0.1.0"
edition = "2021"
description = "gRPC bindings to the bpfd API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/redhat-et/bpfd"

[dependencies]
anyhow = "1"
tonic = { version = "0.9.2", features = ["tls"] }
prost = "0.11"
thiserror = "1"
tokio = { version = "1.27.0", features = ["full"] }
aya = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
url = "2.3.1"
