[package]
description = "gRPC bindings to the bpfd API"
edition = "2021"
license = "Apache-2.0"
name = "bpfd-api"
repository = "https://github.com/bpfd-dev/bpfd"
version = "0.3.0"

[dependencies]
aya = { workspace = true }
clap = { workspace = true, features = ["derive", "std"] }
log = { workspace = true }
prost = { workspace = true, features = ["prost-derive", "std"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true, features = ["parse"] }
tonic = { workspace = true, features = ["codegen", "prost"] }
url = { workspace = true }
