[package]
name = "bpfd-common"
version = "0.1.0"
edition = "2018"
description = "bpfd's common code that is shared between kernel and userspace"
license = "MIT OR Apache-2.0"
repository = "https://github.com/redhat-et/bpfd"

[features]
default = []
user = [ "aya" ]

[dependencies]
aya = { version = "0.11", optional = true }

[lib]
path = "src/lib.rs"
