[package]
name = "bpfd-ebpf"
version = "0.1.0"
edition = "2018"

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
bpfd-common = { path = "../bpfd-common" }

[[bin]]
name = "xdp-dispatcher"
path = "src/xdp.rs"

[[bin]]
name = "xdp-pass"
path = "src/pass.rs"

[[bin]]
name = "xdp-drop"
path = "src/drop.rs"

[profile.dev]
panic = "abort"
opt-level = 2
overflow-checks = false

[profile.release]
panic = "abort"
debug = 2

[workspace]
members = []