[package]
name = "bpfd-k8s-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k8s-openapi = { version = "0.15.0", features = ["v1_23"], default-features = false }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.82"
serde_yaml = "0.9.13"
schemars = { version = "0.8.10", features = ["chrono"] }
thiserror = "1.0.36"

[dependencies.kube]
features = ["runtime", "client", "derive"]
version = "0.76.0"
