[package]
name = "bpfd-k8s-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k8s-openapi = { version = "0.16.0", features = ["v1_25"], default-features = false }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.13"
schemars = { version = "0.8.10", features = ["chrono"] }
thiserror = "1.0.36"

[dependencies.kube]
features = ["runtime", "client", "derive"]
version = "0.76.0"
