[package]
name = "bpfd"
version = "0.2.0"
edition = "2021"
description = "A system daemon for loading BPF programs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bpfd-dev/bpfd"

[[bin]]
    name = "bpfd"
    path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"]}
aya = "0.11"
tokio = { version = "1.28.2", features = ["full", "signal"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
systemd-journal-logger = "1.0.0"
tonic = "0.9.2"
rustls = "0.21.1"
bpfd-api = { version = "0.2.0", path = "../bpfd-api" }
caps = "0.5.4"
nix = { version = "0.26", features = [ "socket", "fs", "mount"]}
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
x509-certificate = "0.19"
oci-distribution = {version = "0.9", default-features = false, features = ["rustls-tls", "trust-dns"] }
serde_json = "1.0"
tar = "0.4"
flate2 = "1.0"
openssl = { version = "0.10.52", features = ["vendored"] }
url = "2.3.1"
users = "0.11.0"
tokio-stream = { version = "0.1.12", features = ["net"] }
sha2 = "0.10.6"
base16ct = { version = "0.2.0", features = ["alloc"] }
tempfile = "3.4.0"
