[package]
description = "A system daemon for loading BPF programs"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "bpfd"
repository = "https://github.com/bpfd-dev/bpfd"
version = "0.2.0"

[[bin]]
name = "bpfd"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true, features = ["std"] }
async-trait = { workspace = true }
aya = { workspace = true, features = ["async_tokio"] }
base16ct = { workspace = true, features = ["alloc"] }
bpfd-api = { workspace = true }
bpfd-csi = { workspace = true }
bytes = { workspace = true }
caps = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "std"] }
env_logger = { workspace = true }
flate2 = { workspace = true, features = ["zlib"] }
log = { workspace = true }
nix = { workspace = true, features = [
    "fs",
    "mount",
    "net",
    "resource",
    "socket",
    "user",
] }
oci-distribution = { workspace = true, default-features = false, features = [
    "rustls-tls",
    "trust-dns",
] }
openssl = { workspace = true, features = ["vendored"] }
rustls = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
sha2 = { workspace = true }
sigstore = { workspace = true, features = [
    "cached-client",
    "cosign-rustls-tls",
    "tuf",
] }
systemd-journal-logger = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "signal"] }
tokio-stream = { workspace = true, features = ["net"] }
toml = { workspace = true }
tonic = { workspace = true }
url = { workspace = true }
users = { workspace = true }
x509-certificate = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
