[package]
description = "gRPC bindings to the bpfman API"
edition = "2021"
license = "Apache-2.0"
name = "bpfman-api"
repository = "https://github.com/bpfman/bpfman"
version = "0.3.1"

[dependencies]
aya = { workspace = true }
clap = { workspace = true, features = ["derive", "std"] }
log = { workspace = true }
prost = { workspace = true, features = ["prost-derive", "std"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true, features = ["parse"] }
tonic = { workspace = true, features = ["codegen", "prost"] }
url = { workspace = true }
