[package]
description = "An executable to attach an eBPF program inside a container"
edition.workspace = true
license.workspace = true
name = "bpfman-ns"
repository.workspace = true
version.workspace = true

[[bin]]
name = "bpfman-ns"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true, features = ["std"] }
aya = { workspace = true }
caps = { workspace = true }
clap = { workspace = true, features = [
    "color",
    "derive",
    "help",
    "std",
    "suggestions",
    "usage",
] }
env_logger = { workspace = true }
log = { workspace = true }
nix = { workspace = true, features = ["sched"] }
