[package]
description = "An executable to attach an eBPF program inside a container"
name = "bpfman-ns"

documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "bpfman-ns"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true, features = ["std"] }
aya = { workspace = true }
caps = { workspace = true }
clap = { workspace = true, features = [
    "color",
    "derive",
    "help",
    "std",
    "suggestions",
    "usage",
] }
env_logger = { workspace = true }
log = { workspace = true }
nix = { workspace = true, features = ["sched"] }
